[gd_scene load_steps=3 format=3 uid="uid://player_scene"]

[ext_resource type="Script" path="res://scripts/presentation/exploration/player_controller.gd" id="1_player"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 12.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 3
motion_mode = 1
script = ExtResource("1_player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_player")

[node name="Shadow" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -4.0
offset_right = 14.0
offset_bottom = 4.0
color = Color(0, 0, 0, 0.3)

[node name="Sprite" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -24.0
offset_right = 12.0
offset_bottom = 0.0
color = Color(0.2, 0.5, 0.8, 1)

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2(0, -20)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_player")

[node name="GrappleLine" type="Line2D" parent="."]
width = 3.0
default_color = Color(0.6, 0.5, 0.3, 1)

[node name="StateLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = -45.0
offset_right = 40.0
offset_bottom = -25.0
horizontal_alignment = 1
vertical_alignment = 1
